@@ -35,6 +35,7 @@
     <hr>
     We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="6.0.6/html">6.0.6</A></P></LI>
       <LI><P><A HREF="6.0.5/html">6.0.5</A></P></LI>
       <LI><P><A HREF="6.0.4/html">6.0.4</A></P></LI>
       <LI><P><A HREF="6.0.3/html">6.0.3</A></P></LI>
